--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <ol id="s1-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/9697.jpg" target="_blank"><img class="photo" src="./img/9697.jpg" alt="s1" height="400" /></a>
+                <a href="./img/9697.jpg" target="_blank"><img class="photo" src="./img/9697.jpg" alt="s1" height="400em" /></a>
             </div>
             <br>
             <li>1996年6月26日，NBA选秀大会上，夏洛特黄蜂在首轮第13位选中科比-布莱恩特，随后将他的选秀权交易给了湖人，从此，篮球世界迎来了一段新的传奇。为了得到科比，湖人付出了明星中锋弗拉德-迪瓦茨作为代价，但事后这被证明是一笔赚到不能再赚的交易。</li>
@@ -223,7 +223,7 @@
         <ol id="s2-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/9798.jpg" target="_blank"><img class="photo" src="./img/9798.jpg" alt="s2" height="400" /></a>
+                <a href="./img/9798.jpg" target="_blank"><img class="photo" src="./img/9798.jpg" alt="s2" height="400em" /></a>
             </div>
             <br>
             <li>1997年12月15日，湖人主场打小牛。科比以替补身份登场，在32分钟时间里21投12中，其中三分球7投3中，罚球4罚3中，得到30分3个篮板和3次助攻。这是科比职业生涯首次得分30+的比赛，湖人也以119-89大胜对手30分。</li>
@@ -258,7 +258,7 @@
         <ol id="s3-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/9899.jpg" target="_blank"><img class="photo" src="./img/9899.jpg" alt="s3" height="400" /></a>
+                <a href="./img/9899.jpg" target="_blank"><img class="photo" src="./img/9899.jpg" alt="s3" height="400em" /></a>
             </div>
             <br>
             <li>由于劳资纠纷，1998-99赛季延迟开赛。1999年1月29日，常规赛开赛之前，湖人与科比签下一份为期6年总值7000万美元的顶薪合同。考虑到在此之前科比甚至不是球队的首发球员，可见湖人对于他在的未来发展，有着十足的信心</li>
@@ -292,7 +292,7 @@
         <ol id="s4-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/9900.jpg" target="_blank"><img class="photo" src="./img/9900.jpg" alt="s4" height="400" /></a>
+                <a href="./img/9900.jpg" target="_blank"><img class="photo" src="./img/9900.jpg" alt="s4" height="400em" /></a>
             </div>
             <br>
             <li>在与奇才队的一场季前赛比赛中，科比不慎伤到右手，因此休战六周。这是科比职业生涯第一次遭遇相对严重的伤病。</li>
@@ -326,7 +326,7 @@
         <ol id="s5-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0001.jpg" target="_blank"><img class="photo" src="./img/0001.jpg" alt="s5" height="400" /></a>
+                <a href="./img/0001.jpg" target="_blank"><img class="photo" src="./img/0001.jpg" alt="s5" height="400em" /></a>
             </div>
             <br>
             <li>2000年，奥尼尔和科比带领湖人夺得他们联手以来的第一个总冠军，OK组合威力尽显，并且被认为是联盟历史上最强的二人组之一。但是渐渐的，湖人两位当家球星之间的关系变得有些微妙。奥尼尔是联盟里最有统治力的内线球员，但是作为小弟的科比已经显露锋芒，而且立志超越乔丹并成为NBA最伟大球员的科比显然不会满足于成为球队的二当家。在这种情况下，OK组合之间的矛盾开始显现出来。</li>
@@ -362,7 +362,7 @@
         <ol id="s6-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0102.jpg" target="_blank"><img class="photo" src="./img/0102.jpg" alt="s6" height="400" /></a>
+                <a href="./img/0102.jpg" target="_blank"><img class="photo" src="./img/0102.jpg" alt="s6" height="400em" /></a>
             </div>
             <br>
             <li>2001-02赛季，科比职业生涯第一次单赛季出场80次。与此同时，他让自己的比赛不断地变得全面，场均得到25.2分、5.5个篮板和5.5次助攻。此外，科比46.9%的投篮命中率是他职业生涯的最高。</li>
@@ -397,7 +397,7 @@
         <ol id="s7-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0203.jpg" target="_blank"><img class="photo" src="./img/0203.jpg" alt="s7" height="400" /></a>
+                <a href="./img/0203.jpg" target="_blank"><img class="photo" src="./img/0203.jpg" alt="s7" height="400em" /></a>
             </div>
             <br>
             <li>2002年11月18日，湖人坐镇主场迎战火箭，这是科比与2002年NBA状元秀姚明的首次交手。由于“大鲨鱼”奥尼尔缺阵，因此科比成为了这场比赛的主角。他此役出场45分钟，37投18中得到46分，外加6个篮板和4次助攻，但是湖人最终以89-93负于火箭。姚明在这场比赛中替补出场23分钟，9投9中砍下20分和6个篮板。</li>
@@ -431,7 +431,7 @@
         <ol id="s8-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0304.jpg" target="_blank"><img class="photo" src="./img/0304.jpg" alt="s8" height="400" /></a>
+                <a href="./img/0304.jpg" target="_blank"><img class="photo" src="./img/0304.jpg" alt="s8" height="400em" /></a>
             </div>
             <br>
             <li>2003年12月20日，湖人主场迎战丹佛掘金。科比参加完性侵案的听证会后便迅速赶回洛杉矶，等到他上场时，比赛已进行到第二节。但是末节最后1秒，科比甩开掘金的防守球员，中投绝杀，并最终将比分定格在101-99。</li>
@@ -466,7 +466,7 @@
         <ol id="s9-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0405.jpg" target="_blank"><img class="photo" src="./img/0405.jpg" alt="s9" height="400" /></a>
+                <a href="./img/0405.jpg" target="_blank"><img class="photo" src="./img/0405.jpg" alt="s9" height="400em" /></a>
             </div>
             <br>
             <li class="other">2004年11月13日，湖人客场挑战魔术。比赛中，科比在一次突破进攻中骑扣魔术队的NBA状元秀——德怀特-霍华德，并让霍华德遭受胯下之辱。这场比赛，科比31投14中砍下41分，外加7个篮板和8次助攻。</li>
@@ -501,7 +501,7 @@
         <ol id="s10-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0506.jpg" target="_blank"><img class="photo" src="./img/0506.jpg" alt="s10" height="400" /></a>
+                <a href="./img/0506.jpg" target="_blank"><img class="photo" src="./img/0506.jpg" alt="s10" height="400em" /></a>
             </div>
             <br>
             <li>2005-06赛季成为了科比职业生涯的一个十字路口。尽管曾经与科比产生过分歧，但是菲尔-杰克逊在这个赛季重返湖人队执教。科比非常欢迎湖人队的这个决定，而且他和菲尔-杰克逊的第二次合作很不错，并带领湖人队重新打入季后赛。</li>
@@ -536,7 +536,7 @@
         <ol id="s11-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0607.jpg" target="_blank"><img class="photo" src="./img/0607.jpg" alt="s11" height="400" /></a>
+                <a href="./img/0607.jpg" target="_blank"><img class="photo" src="./img/0607.jpg" alt="s11" height="400em" /></a>
             </div>
             <br>
             <li>早在2005-06赛季末，就有消息称科比将把球衣号码从8号改为24号。此前在上高中时，科比就曾穿过24号球衣，后来曾改成33号。在接受TNT采访时，科比曾透露在菜鸟赛季他曾想要24号未果，33号又被湖人退役（贾巴尔）。</li>
@@ -571,7 +571,7 @@
         <ol id="s12-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0708.jpg" target="_blank"><img class="photo" src="./img/0708.jpg" alt="s12" height="400" /></a>
+                <a href="./img/0708.jpg" target="_blank"><img class="photo" src="./img/0708.jpg" alt="s12" height="400em" /></a>
             </div>
             <br>
             <li class="other">2007年12月24日对尼克斯，科比得到39分，29岁122天的他成为NBA史上最年轻的两万分先生。如今，这一纪录已被勒布朗-詹姆斯打破。</li>
@@ -606,7 +606,7 @@
         <ol id="s13-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0809.jpg" target="_blank"><img class="photo" src="./img/0809.jpg" alt="s13" height="400" /></a>
+                <a href="./img/0809.jpg" target="_blank"><img class="photo" src="./img/0809.jpg" alt="s13" height="400em" /></a>
             </div>
             <br>
             <li>科比率湖人以7连胜开局。2008年12月8日，科比拿下20分率湖人战胜雄鹿，取得17胜2负，追平湖人队史单季前19场最佳战绩。12月17日科比得到28分率队战胜尼克斯，湖人前24场取得21胜3负。</li>
@@ -641,7 +641,7 @@
         <ol id="s14-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/0910.jpg" target="_blank"><img class="photo" src="./img/0910.jpg" alt="s14" height="400" /></a>
+                <a href="./img/0910.jpg" target="_blank"><img class="photo" src="./img/0910.jpg" alt="s14" height="400em" /></a>
             </div>
             <br>
             <li class="other">2009年11月5日和7日，在连续对阵火箭和灰熊的比赛中，科比均拿下41分，合计60投34中。而这也是他近4场内第3次得分40+（11月2日对老鹰，也得到41分）。</li>
@@ -676,7 +676,7 @@
         <ol id="s15-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/1011.jpg" target="_blank"><img class="photo" src="./img/1011.jpg" alt="s15" height="400" /></a>
+                <a href="./img/1011.jpg" target="_blank"><img class="photo" src="./img/1011.jpg" alt="s15" height="400em" /></a>
             </div>
             <br>
             <li class="other">2010年11月12日对掘金，科比32投11中得到33分，成为NBA史上最年轻的26000分先生。但该场湖人却以112-118告负，开季8连胜戛然而止。</li>
@@ -711,7 +711,7 @@
         <ol id="s16-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/1112.jpg" target="_blank"><img class="photo" src="./img/1112.jpg" alt="s16" height="400" /></a>
+                <a href="./img/1112.jpg" target="_blank"><img class="photo" src="./img/1112.jpg" alt="s16" height="400em" /></a>
             </div>
             <br>
             <li>2011-12赛季还未开始，科比先遭遇“重创”，与自己相伴十年半的妻子瓦妮莎在12月1日提出离婚申请，而科比在7日签署回应，如果这对被NBA视为金童玉女的婚姻走到尽头那将是乔丹之后又一重大场外新闻，所幸，经过科比不懈努力与挽留，让他们至今天成为NBA巨星婚姻楷模。</li>
@@ -746,7 +746,7 @@
         <ol id="s17-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/1213.jpg" target="_blank"><img class="photo" src="./img/1213.jpg" alt="s17" height="400" /></a>
+                <a href="./img/1213.jpg" target="_blank"><img class="photo" src="./img/1213.jpg" alt="s17" height="400em" /></a>
             </div>
             <br>
             <li class="other">2012年12月6日，湖人坐客新奥尔良球馆挑战黄蜂（现鹈鹕），第二节比赛还有1分20秒时，科比面对阿米奴、梅森围剿以一记蝴蝶穿花式过人杀到油漆区，面对罗宾洛佩兹和安德森补防他以一记高难度回头望月射进本场第14分，从而令其职业生涯达到30001分，成功跨入三万分俱乐部，以最年轻姿态成为历史第五位三万分先生。</li>
@@ -781,7 +781,7 @@
         <ol id="s18-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/1314.jpg" target="_blank"><img class="photo" src="./img/1314.jpg" alt="s18" height="400" /></a>
+                <a href="./img/1314.jpg" target="_blank"><img class="photo" src="./img/1314.jpg" alt="s18" height="400em" /></a>
             </div>
             <br>
             <li>2013年11月26日仍处恢复期的科比与湖人签下一份两年4850万合约。据科比爆料他在签约时甚至与管理层没有任何谈判直接签字，原因无它，为了自己第六冠梦想他愿意主动降薪1600万美元，以期球队有足够薪资空间引进下一位巨星。</li>
@@ -816,7 +816,7 @@
         <ol id="s19-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/1415.jpg" target="_blank"><img class="photo" src="./img/1415.jpg" alt="s19" height="400" /></a>
+                <a href="./img/1415.jpg" target="_blank"><img class="photo" src="./img/1415.jpg" alt="s19" height="400em" /></a>
             </div>
             <br>
             <li>忠诚是NBA荣誉符号之一，在漫长的69年历史长河中上一位忠诚的典范是约翰-斯托克顿，他职业生涯19年1504场比赛皆在爵士度过。时针定格在2014年10月29日，阔别十个月赛场后科比再次登上斯台普斯球馆，从这一刻起他追平斯托克顿忠诚纪录，成为有史以来第二人，并且于下赛季在这一纪录上镌刻下自己芳名。</li>
@@ -851,7 +851,7 @@
         <ol id="s20-detail" hidden="hidden">
             <br>
             <div align="middle">
-                <a href="./img/1516.jpg" target="_blank"><img class="photo" src="./img/1516.jpg" alt="s20" height="400" /></a>
+                <a href="./img/1516.jpg" target="_blank"><img class="photo" src="./img/1516.jpg" alt="s20" height="400em" /></a>
             </div>
             <br>
             <li>2015年11月30日，伟大的科比布莱恩特在球员论坛上诗情般撰文“我的内心仍能承受七苦八难，我的内心仍能忍耐各种艰难，但是我的身体已经支撑不住，我明白，哪怕太放不开你的爱，也到了说再见的时候，5...4...3...2...1...”全世界媒体哗然，球迷进入珍爱期，29场谢幕巡礼正式拉开帷幕！</li>
